# T-Minus

./: CMakeLists.txt  CMakePresets.json  buildspec.json
data/locale/: en-US.ini
src/: plugin-main.cpp  plugin-support.c.in
src/core/: action-executor.cpp  action-executor.hpp  timer-data.hpp  timer-engine.cpp  timer-engine.hpp
src/utils/: format-utils.cpp  format-utils.hpp  obs-utils.cpp  obs-utils.hpp
src/widgets/: action-list-widget.cpp  action-list-widget.hpp  obs-dock-wrapper.hpp  timer-settings-dialog.cpp  timer-settings-dialog.hpp  timer-widget.cpp  timer-widget.hpp  timer-widget.ui  tminus-dock.cpp  tminus-dock.hpp
